third_party/move/move-compiler-v2/tests/checking/typing/eq.exp

Diagnostics:
error: invalid call of `==`: mutability mismatch (&mut != &) for argument 2
   ┌─ tests/checking/typing/eq.move:18:20
   │
18 │         (&mut s == s_ref: bool);
   │                    ^^^^^

error: invalid call of `==`: mutability mismatch (&mut != &) for argument 2
   ┌─ tests/checking/typing/eq.move:27:19
   │
27 │         (r_mut == r: bool);
   │                   ^
